--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-summernote==0.8.20.0
 gunicorn==20.1.0
 idna==3.10
 oauthlib==3.3.1
+pillow==12.0.0
 psycopg2==2.9.10
 pycparser==2.23
 PyJWT==2.10.1
